Fixed menu on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,7 @@ footer {
 
     #menu {
         grid-template-columns: 40% 60%;
-        width: 80%;
+        width: 90%;
     }
     #menu-links {
       font-size: 0.8em;
